--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,6 +16,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.7/paper/bootstrap.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
+    <!-- Style Sheet -->
+    <link rel="stylesheet" href="assets/css/style.css">
+    <!-- tab icon -->
+    <link rel="shortcut icon" href="assets/img/news-icon.png"/>
     <!-- <link rel="stylesheet" href="/css/style.css"> -->
   </head>
   <body>
